address comments from Martijn, run Acrolinx